syntax = "proto3";

option java_package = "io.grpc.teams";

message team {
  string id = 1;
  string name = 2;
}

message CreateTeamRequest {
  string name = 1;
}
message CreateTeamResponse {
  string id = 1;
}

message GetTeamRequest {
  string id = 1;
}
message GetTeamResponse {
  team team = 1;
}

message UpdateTeamRequest {
  string name = 1;
  string id = 2;
}

message UpdateTeamResponse {
  int32 status = 1;
}

message DeleteTeamRequest {
  string id = 1;
}
message DeleteTeamResponse {
  int32 status = 1;
}


service TeamService {
  rpc CreateTeam(CreateTeamRequest) returns (CreateTeamResponse) {}
  rpc GetTeam(GetTeamRequest) returns (GetTeamResponse) {}
  rpc UpdateTeam(UpdateTeamRequest) returns (UpdateTeamResponse) {}
  rpc DeleteTeam(DeleteTeamRequest) returns (DeleteTeamResponse) {}
}
